--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Clases/Clase1/nbproject/private/
 /Clases/Clase2/nbproject/private/
+/Clases/Clase2/build/
+/Clases/Clase3/nbproject/private/
+/Clases/Clase3/build/
+/Clases/Clase3/dist/
