--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Clases/Clase3/nbproject/private/
 /Clases/Clase3/build/
 /Clases/Clase3/dist/
+/Clases/Clase4/nbproject/private/
+/Clases/Clase5/nbproject/private/
+/Clases/Clase5/build/
