--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Clases/Clase4/nbproject/private/
 /Clases/Clase5/nbproject/private/
 /Clases/Clase5/build/
+/Clases/Nueva Carpeta/2clase6/nbproject/private/
+/Clases/Nueva Carpeta/2clase6/build/
