--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /Clases/Clase4/nbproject/private/
 /Clases/Clase5/nbproject/private/
 /Clases/Clase5/build/
+/Clases/Clase6/nbproject/private/
+/Clases/Clase6/build/
+/Clases/Clase7/nbproject/private/
+/Clases/Clase7/build/
