--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Clases/Clase5/build/
 /Clases/Nueva Carpeta/2clase6/nbproject/private/
 /Clases/Nueva Carpeta/2clase6/build/
+/Clases/Nueva Carpeta/2clase7/nbproject/private/
+/Clases/Nueva Carpeta/2clase7/build/
