--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 /Clases/Clase9/nbproject/private/
 /Clases/Clase9/build/
 /Clases/Clase11/nbproject/private/
+/Clases/Clase11/build/
+/Clases/Practica1/nbproject/private/
+/Clases/Practica1/build/
