--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /Clases/Clase11/build/
 /Clases/Practica1/nbproject/private/
 /Clases/Practica1/build/
+/Clases/PracticaMatriz/nbproject/private/
+/Clases/PracticaMatriz/build/
