--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /Clases/Practica1/build/
 /Clases/PracticaMatriz/nbproject/private/
 /Clases/PracticaMatriz/build/
+/Clases/Clase12/nbproject/private/
+/Clases/Clase12/build/
