Practicas de listas

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@
 /Clases/PracticaMatriz/build/
 /Clases/Clase12/nbproject/private/
 /Clases/Clase12/build/
+/Clases/Quiz2/nbproject/private/
+/Clases/Quiz2/build/
+/Clases/PracticaListas1/nbproject/private/
+/Clases/PracticaListas1/build/
