Tarea estructura de datos

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@
 /Clases/Quiz2/build/
 /Clases/PracticaListas1/nbproject/private/
 /Clases/PracticaListas1/build/
+/Clases/TareaListas/nbproject/private/
+/Clases/TareaListas/build/
+/Clases/Clase13/nbproject/private/
+/Clases/Clase13/build/
