--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@
 /Clases/TareaListas/build/
 /Clases/Clase13/nbproject/private/
 /Clases/Clase13/build/
+/Clases/TDA/nbproject/private/
+/Clases/TDA/build/
+/Clases/PracticaExamen/nbproject/private/
+/Clases/PracticaExamen/build/
