--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@
 /Clases/PracticaExamen/nbproject/private/
 /Clases/PracticaExamen/build/
 /Clases/Clase14/nbproject/private/
+/Clases/Clase14/build/
